objects/TracRTC__User_Usage_Metrics__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Usage metrics specific to an individual user.</description>
    <fields>
        <fullName>TracRTC__Active_In_Dynamic_Date__c</fullName>
        <description>Datetime for when a user was last dynamically assigned.</description>
        <label>Active In Dynamic Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Active_In_Round_Robin_Date__c</fullName>
        <description>Datetime for when a user was added to a round robin flow step.</description>
        <label>Active In Round Robin Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Active_In_User_Group_Date__c</fullName>
        <description>Datetime for when a user was included in a user group.</description>
        <label>Active In User Group Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Has_Been_Dynamically_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not a user was dynamically assigned.</description>
        <label>Has Been Dynamically Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Is_Included_In_Round_Robin_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not a user is included in a round robin step.</description>
        <label>Is Included In Round Robin Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Is_Included_In_User_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not a user is included in a user group.</description>
        <label>Is Included In User Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__User_Id__c</fullName>
        <description>Users salesforce user Id.</description>
        <externalId>true</externalId>
        <label>User Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>User Usage Metrics</label>
    <listViews>
        <fullName>TracRTC__All</fullName>
        <columns>NAME</columns>
        <columns>TracRTC__Active_In_Dynamic_Date__c</columns>
        <columns>TracRTC__Active_In_Round_Robin_Date__c</columns>
        <columns>TracRTC__Active_In_User_Group_Date__c</columns>
        <columns>TracRTC__Has_Been_Dynamically_Assigned__c</columns>
        <columns>TracRTC__Is_Included_In_Round_Robin_Step__c</columns>
        <columns>TracRTC__Is_Included_In_User_Group__c</columns>
        <columns>TracRTC__User_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>